fixing gap per nested list

--- a/themes/hitchy/source/design/_lib/basics/text.scss
+++ b/themes/hitchy/source/design/_lib/basics/text.scss
@@ -27,6 +27,10 @@
 		margin-top: 0.7em;
 	}
 
+	li > ul:not(:first-child), li > ol:not(:first-child) {
+		margin-top: 0;
+	}
+
 	blockquote {
 		position: relative;
 		overflow: auto;
